# unspeech

./: .gitignore  .golangci.yml  .goreleaser.yaml  .rustfmt.toml  .tool-versions  Cargo.toml  Dockerfile  Justfile  README.md  cspell.config.yaml  eslint.config.ts  flake.nix  go.mod  go.sum  package.json  pnpm-lock.yaml
.github/workflows/: ci.yaml  release-sdk.yml  release.yaml
cmd/: main.go
cmd/unspeech/: main.go
crates/provider_elevenlabs/: Cargo.toml
crates/provider_elevenlabs/src/: speech.rs
crates/provider_openai/: Cargo.toml
crates/provider_openai/src/: speech.rs
crates/shared/: Cargo.toml
crates/shared/src/: error.rs  lib.rs  speech.rs
internal/middlewares/: error_handler.go  request_log.go  route_not_found.go
pkg/apierrors/: apierrors.go  errors.go
pkg/backend/: backend.go  elevenlabs.go  error.go  koemotion.go  openai.go
pkg/backend/alibaba/: README.md  speech.go  voices.json
pkg/backend/cloudflare/: cloudflare.go
pkg/backend/deepgram/: speech.go  voices.go
pkg/backend/elevenlabs/: voices.go
pkg/backend/microsoft/: microsoft.go  speech.go  voices.go
pkg/backend/openai/: speech.go  voices.go
pkg/backend/types/: voices.go
pkg/backend/volcengine/: speech.go
pkg/configs/: configs.go
pkg/jsonapi/: error.go
pkg/logs/: attrs.go
pkg/utils/: json.go  json_test.go  string.go  string_test.go
pkg/utils/jsonpatch/: jsonpatch_test.go
sdk/typescript/: README.md  eslint.config.ts  package.json  pnpm-lock.yaml  tsconfig.lib.json  tsconfig.node.json  tsdown.config.ts  tsup.config.ts
sdk/typescript/src/: index.ts
sdk/typescript/src/backend/: alibaba.ts  alibabacloud.ts  deepgram.ts  elevenlabs.ts  index.ts  microsoft.ts  volcengine.ts
sdk/typescript/src/types/: voice.ts
sdk/typescript/src/utils/: list-voices.ts
src/: main.rs  shutdown_signal.rs  speech.rs
