[workspace.package]
version = "0.2.0"
authors = ["Moeru AI"]
edition = "2024"
rust-version = "1.80"
description = "Your Text-to-Speech Services, All-in-One."
documentation = "https://github.com/moeru-ai/unspeech"
readme = "README.md"
homepage = "https://github.com/moeru-ai/unspeech"
repository = "https://github.com/moeru-ai/unspeech"
license = "AGPL-3.0"
publish = false

[package]
name = "unspeech"
version.workspace = true
edition.workspace = true
publish.workspace = true
readme.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "z"
panic = "abort"
strip = "symbols"

[workspace]
members = [
    ".",
    # "crates/foo",
]

[workspace.dependencies]

[dependencies]
axum = { version = "0.8", features = ["tokio", "macros"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
