[package]
name = "unspeech_provider_elevenlabs"
version.workspace = true
edition.workspace = true
publish.workspace = true
readme.workspace = true
license.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
name = "unspeech_provider_elevenlabs"
path = "src/lib.rs"

[dependencies]
unspeech_shared = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
